--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "clsx": "^2.1.0",
     "faker": "^5.5.3",
     "flowbite": "^2.3.0",
+    "formik": "^2.4.5",
     "immer": "^10.0.4",
     "lucide-react": "^0.365.0",
     "lucide-vue-next": "^0.365.0",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
@@ -31,6 +32,7 @@
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
