--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "clsx": "^2.1.0",
     "faker": "^5.5.3",
     "flowbite": "^2.3.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf": "^0.0.11",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.365.0",
     "next": "^14.1.4",
     "react": "^18",
