--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "html2pdf": "^0.0.11",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.365.0",
-    "next": "^14.1.4",
+    "next": "^14.2.2",
+    "npx": "^10.2.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
-    "shadcn-ui": "^0.2.3",
+    "shadcn-ui": "^0.8.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0",
     "zod": "^3.22.4",
@@ -58,5 +59,6 @@
   "bugs": {
     "url": "https://github.com/wossenfekadie1993/startup-runaway-calculator-with-next/issues"
   },
-  "homepage": "https://github.com/wossenfekadie1993/startup-runaway-calculator-with-next#readme"
+  "homepage": "https://github.com/wossenfekadie1993/startup-runaway-calculator-with-next#readme",
+  "keywords": []
 }
