--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "add": "^2.0.6",
     "apexcharts": "^3.48.0",
     "chart.js": "^4.4.2",
@@ -21,6 +22,7 @@
     "flowbite": "^2.3.0",
     "html2canvas": "^1.4.1",
     "html2pdf": "^0.0.11",
+    "immer": "^10.0.4",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.365.0",
     "next": "^14.2.2",
