--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "add": "^2.0.6",
-    "apexcharts": "^3.48.0",
+    "apexcharts": "^3.49.0",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "faker": "^5.5.3",
     "flowbite": "^2.3.0",
     "html2canvas": "^1.4.1",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.365.0",
     "next": "^14.1.4",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
