--- a/package.json
+++ b/package.json
@@ -14,26 +14,22 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "add": "^2.0.6",
-    "apexcharts": "^3.48.0",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "faker": "^5.5.3",
     "flowbite": "^2.3.0",
     "html2canvas": "^1.4.1",
     "html2pdf": "^0.0.11",
-    "immer": "^10.0.4",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.365.0",
     "next": "^14.2.2",
     "npx": "^10.2.2",
     "react": "^18",
-    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "shadcn-ui": "^0.8.0",
-    "tailwindcss-animate": "^1.0.7",
-    "yup": "^1.4.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
