--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
